--- a/src/test/resources/login.properties
+++ b/src/test/resources/login.properties
@@ -1,3 +1,3 @@
-email=tushar.mahajan@Geminisolutions.com
-password=Gmail#345
-wrongPassword=password
+email=dHVzaGFyLm1haGFqYW5AR2VtaW5pc29sdXRpb25zLmNvbQ==
+password=R21haWwjMzQ1
+wrongPassword=R21hawgdfgQ1
